Horizontal scrolling fix pt 2

--- a/docs/stylesheets/fusion.css
+++ b/docs/stylesheets/fusion.css
@@ -4,7 +4,8 @@
 	scroll-behavior: smooth;
 }
 
-:root {
+body {
+	width: 100vw;
 	overflow-x: hidden;
 }
 
